<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/booking_dispo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/booking_time_view"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/booking_time_view"
        android:text="@string/booking_dipo"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black" />


    <TextView
        android:id="@+id/booking_time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/booking_dispo_view"
        android:layout_marginTop="5dp"
        android:text="@string/booking_time"
        android:textAlignment="center"
        android:textColor="@color/greenAlbaColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/booking_price_view"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/booking_dispo_view"
        android:layout_toRightOf="@+id/booking_dispo_view"
        android:text="@string/booking_price"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/booking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/booking_reserver"
        android:textSize="14sp" />


</RelativeLayout>