<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mygreenfee.OrderActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/whiteColor"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollv"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/AppTheme"
        app:titleTextColor="@color/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaneue"
            android:gravity="center"
            android:text="@string/order_Title"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/formulaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGrayColor"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whiteColor"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/simpleProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="false"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:indeterminate="true"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:fontFamily="helveticaneue"
            android:gravity="center_vertical"
            android:text="@string/order_Reussite"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonvalidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/greenAlbaColor"
            android:text="@string/order_Button"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
